--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-baseurl: "/nova-home/"
-url: "https://dhrubokamal.github.io/"
+baseurl: "/novafarha.github.io/"
+url: "https://novafarha.github.io/"
 
 collections:
   projects:
